<resources>
    <string name="app_name">Prinzkoch</string>
    <string name="log_in">Anmelden</string>
    <string name="register">Registrieren</string>
    <string name="my_profile">Mein Profil</string>
    <string name="new_recipe">Neues Rezept</string>
    <string name="my_recipes">Meine Rezepte</string>
    <string name="log_out">Abmelden</string>
    <string name="name">Name</string>
    <string name="register_tutorial">Gebe deinen Namen, deine Email Adresse und ein Passwort ein, um dich zu registrieren.</string>
    <string name="email">Email Adresse</string>
    <string name="password">Passwort</string>
    <string name="password_submit">Passwort bestätigen</string>
    <string name="please_wait">Bitte warten</string>
    <string name="log_in_tutorial">Gib deine Email Adresse und dein Passwort an, um dich anzumelden.</string>
    <string name="save">Speichern</string>
    <string name="new_recipe_tutorial">Bitte erstelle nur Rezepte, die du, oder jemand, den du kennst, schon ausprobiert hast.</string>
    <string name="create">Erstellen</string>
    <string name="name_of_recipe">Name des Rezepts</string>
    <string name="short_description">Kurze Beschreibung</string>
    <string name="breakfast">Frühstück</string>
    <string name="lunch">Mittagessen</string>
    <string name="diner">Abendessen</string>
    <string name="snacks">Snacks</string>
    <string name="long_description">Anleitung</string>
    <string name="create_new_recipe">Neues Rezept erstellen</string>
    <string name="new_comment">Kommentieren...</string>
    <string name="comment">Kommentare</string>
    <string name="search_examples">suchen...</string>
    <string name="delete">Löschen</string>
</resources>