<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:theme="@style/Theme.Prinzkoch.AppBarOverlay"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            app:titleTextColor="@color/white"
            android:id="@+id/toolbar_my_profile_activity"
            app:popupTheme="@style/Theme.Prinzkoch.PopUpOverlay"
            android:layout_height="?attr/actionBarSize">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:elevation="@dimen/cardview_elevation"
        android:layout_margin="@dimen/cardview_margin"
        app:cardCornerRadius="@dimen/cardview_corner_radius"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/nav_header_main_circleimageview"
                android:layout_gravity="center"
                android:src="@drawable/ic_user_place_holder"
                android:id="@+id/iv_my_profile_activity"
                android:layout_height="@dimen/nav_header_main_circleimageview">
            </de.hdodenhof.circleimageview.CircleImageView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/et_password_margin_top"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_my_profile_name"
                    android:focusable="false"
                    android:hint="@string/name"
                    android:layout_height="wrap_content">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/et_password_margin_top"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_my_profile_email"
                    android:layout_width="match_parent"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:text="@string/save"
                android:id="@+id/cmd_save_profile_changes"
                android:layout_marginTop="@dimen/cmd_register_submit_margin_top"
                android:layout_height="wrap_content">
            </com.google.android.material.button.MaterialButton>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>